style: fix background on mobile

--- a/assets/bundle/_nav.sass
+++ b/assets/bundle/_nav.sass
@@ -77,9 +77,7 @@
 
 
 body 
-  background: linear-gradient(left top, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 0%, rgba(102,102,102,1) 12%, rgba(44,44,44,1) 23%, rgba(0,0,0,1) 51%, rgba(17,17,17,1) 58%, rgba(43,43,43,1) 72%, rgba(28,28,28,1) 91%, rgba(19,19,19,1) 100%)
-  background: linear-gradient(145deg,  #003bca , #00c1da)
-  background: linear-gradient(145deg,  #00c1da, #003bca  )
+  background: linear-gradient(305deg,  #003bca , #00c1da)
   background-attachment: fixed
 
   
@@ -122,8 +120,8 @@ body
 
 @media only screen and (max-width: 467px) 
   body 
-    background-color: rgba(24,41,53,0.9)
-    background: linear-gradient(145deg,  #00c1da, #003bca)
+    //background-color: rgba(24,41,53,0.9)
+    //background: linear-gradient(145deg,  #00c1da, #003bca)
     
   .sidenav
 
